test/libsolidity/syntaxTests/nameAndTypeResolution/505_builtin_depositroot_reject_value.sol
contract C {
    function f() public {
        depositroot.value();
    }
}
// ----
// TypeError 8820: (47-62): Member "value" is only available for payable functions.